app/assets/stylesheets/pages/_home.scss
.landing {
  width: 100%;
  height: 100vh;

  h1 {
    position: absolute;
    left: 8.33%;
    top: 43.36%;
    bottom: 27.59%;

    width: 500px;

    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    font-size: 45px;
    line-height: 53px;

    color: #404040;
  }

  h2 {
    position: absolute;
    left: 8.33%;
    top: 52.96%;
    bottom: 21%;

    width: 500px;

    font-family: Roboto;
    font-style: normal;
    font-weight: 300;
    font-size: 30px;
    line-height: 35px;

    color: #717171;
  }

  h3 {
    position: absolute;
    left: 8.33%;
    top: 57.96%;
    bottom: 21%;

    width: 500px;

    font-family: Roboto;
    font-style: normal;
    font-weight: 300;
    font-size: 27px;
    line-height: 35px;

    color: #717171;
  }

  .text {
    line-height: 5px;
  }

  .btn-primary {
    position: absolute;
    left: 8.33%;
    top: 514px;

    .disabled {
      background-color: grey;
    }
  }

  .images {
    position: absolute;
    width: 575px;
    height: 585px;
    right: 120px;
    top: 105px;

    img {
      position: absolute;
      border-radius: 10px;
    }

    #img1 {
      width: 169px;
      height: 253px;
      left: 4px;
      top: 5px;

      box-shadow: 0px 4px 49px rgba(0, 0, 0, 0.12);
    }

    #img2 {
      width: 301px;
      height: 178px;
      left: 161px;
      top: 174px;

      box-shadow: 0px 16px 49px rgba(0, 0, 0, 0.28);
    }

    #img3 {
      width: auto;
      height: 160px;
      left: 44px;
      top: 343px;

      box-shadow: 0px 4px 49px rgba(0, 0, 0, 0.38);
      transform: rotate(90deg);
    }

    #img4 {
      width: 171px;
      height: 242px;
      left: 404px;
      top: 343px;

      box-shadow: 0px 4px 49px rgba(0, 0, 0, 0.38);
    }
  }
}

#category-circle {
  width: 800px;
  height: 800px;
  position: relative;
  margin: auto;

  .text-content {
    width: 257px;
    height: 193px;
    margin: auto;
    padding-top: 300px;
  }

  button {
    height: 70px;
    box-shadow: none;
  }

  a {
    text-decoration: none;
    color: #167FFB;
  }

  .category-icon {
    width: 70px;
  }
}

.section-colums {
  display: flex;
  flex-direction: row;
  max-width: 1000px;
  margin: auto;
  flex-wrap: wrap;
  border-top: 1px solid #e3e3e3;
  border-bottom: 1px solid #e3e3e3;
  padding: 46px;
}

.flex-expander {
  flex: 1;
}
.home-page-footer .title {
  color: #bababa;
  margin-bottom: 12px;
  font-weight: 700;
  letter-spacing: 1px;

}

.column {
  font-size: 18px;
}

.icons {
  height: 90px;
  width: auto;
  padding-bottom: 8px;
}

.process {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 1.5rem;
  text-align: center;
}

.landing-icons {
  padding: 6px;
  p {
    text-align: justify;
  }
}

#icons-header {
  font-family: Roboto;
  display: block;
  padding-bottom: 24px;
  font-weight: 900;
  text-align: center;

}

section {
  margin-bottom: 250px;
}

.bottom-line {
  height: 2px;
  width: 3rem;
  background: grey;
  display: block;
  margin: 0 auto 1rem auto;
}

.sticky-bar {
  #find-recipies {
    width: 215px;
  }
}
.footer-section {
display: flex;
flex-direction: column;
}
.footer-link {
  margin-top: 10px;
  text-decoration: none;
  color: black;
    &:hover {
      color: $green;
      text-decoration: none;
  }
}

.egg-footer {
  height: 100px;
  position: absolute;
  left: 617px;
}

